# archive-viewer

./: CMakeLists.txt  README.md  arch_info.h  main.cpp  mainwindow.cpp  mainwindow.h  mymodel.cpp  mymodel.h
minizip-ng-master/: CMakeCache.txt  LICENSE.encrypt.pkcrypt  Makefile  cmake_install.cmake  minizip  minizip-config.cmake  minizip.pc  test_cmd
